--- a/src/css/style.css
+++ b/src/css/style.css
@@ -268,6 +268,7 @@ button {
 
 .product-category h2 {
   text-align: center;
+  margin-bottom: 2rem;
   margin-bottom: 1.5rem;
   font-size: 1.5rem;
   color: var(--dark-grey, #222);
@@ -322,7 +323,7 @@ button {
   color: var(--dark-grey, #222);
   text-align: center;
   margin: 0.5rem 0 0 0;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .category-card a {
@@ -352,7 +353,11 @@ button {
   }
   .category-card {
     width: 60vw;
-    max-width: 350px;
+    max-width: 150px;
+  }
+  .category-card__image img {
+    width: 60px;
+    height: 60px;
   }
 }
 /* End Product Category Section Styles */
