--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -4,6 +4,18 @@
     Sleep<span class="highlight">Outside</span></a
   >
 </div>
+
+<!-- Search Box -->
+  <form id="search-form">
+    <input 
+      type="text" 
+      id="search-input" 
+      placeholder="Search products..."
+      required
+    />
+    <button type="submit">Search</button>
+  </form>
+
 <div class="cart">
   <a href="../../cart/index.html" title="View your shopping cart">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
@@ -31,3 +43,4 @@
     </svg>
   </a>
 </div>
+
