--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,6 +110,11 @@ button {
   border: 0;
   font-size: var(--large-font);
   cursor: pointer;
+
+  &:hover {
+    background-color: var(--tertiary-color);
+    transform: scale(1.05);
+  }
 }
 
 .divider {
@@ -199,7 +204,7 @@ button {
 
 .product-detail {
   padding: 1em;
-  max-width: 500px;
+  max-width: 600px;
   margin: auto;
 }
 
@@ -246,7 +251,71 @@ button {
 }
 /* End cart list card styles */
 
-@media screen and (min-width: 500px) {
+/* Start Cart checkout */
+.checkout-section {
+  margin: 0.5em 0;
+  padding: 1em;
+
+  @media screen and (max-width: 499px) {
+    margin: 1em 0;
+    padding: 1.5em 0.5em;
+  }
+}
+
+.checkout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+  @media screen and (min-width: 600px) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  & h3 {
+    color: var(--dark-grey);
+    margin-bottom: 1em;
+
+    @media screen and (min-width: 600px) {
+      text-align: left;
+      margin-bottom: 0;
+    }
+  }
+}
+
+.checkout-btn {
+  padding: 0.5em 2em;
+  margin-top: 1em;
+  background-color: var(--secondary-color);
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: var(--large-font);
+  font-weight: bold;
+  display: inline-block;
+  transition: all 0.3s ease;
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--tertiary-color);
+    transform: scale(1.05);
+  }
+
+  @media screen and (min-width: 600px) {
+    margin-top: 0;
+    align-self: center;
+  }
+
+  @media screen and (max-width: 499px) {
+    width: 80%;
+    text-align: center;
+  }
+}
+/* End Cart checkout */
+
+@media screen and (min-width: 600px) {
   body {
     max-width: 1080px;
     margin: auto;
